# speca-codex

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OPTIMIZATION_NOTES.md  README.ja.md  README.md  SECURITY.md  pyproject.toml
.codex/: launch.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
automation/: AUDIT_PLAYBOOK.md
benchmarks/: README.md
cli/: README.md  package-lock.json  package.json
docs/: CODEX_APP.ja.md  CODEX_APP.md  SPECA_CLI_SPEC.md  application_context.md
prompts/: 01_SCOPE.md  01b_extract_worker.md  02_SPEC.md  02c_codelocation_worker.md  03_CODE_INSPECTOR.md  03_auditmap_worker_inline.md  04_ATTACK_SCENARIOS.md  04_review_worker.md  05_poc.md  06_POC.md  06_report.md  06b_audit_report.md
schemas/: Phase04Partial.schema.json  ReviewedItem.schema.json  TargetInfo.schema.json
scripts/: build_phase05_candidates.py  find_precedents_and_bugs.py  find_precedents_round2.py  get_github_issues.sh  llm_bulk_audit_parallel.py  match_similar_findings.py  run_phase.py  setup_mcp.sh
server/: app.py  discord.py  models.py  orchestrator_bridge.py  path_safety.py  run_manager.py
tests/: test_bom_inputs.py  test_code_scope.py  test_codex_app_runner.py  test_codex_bin.py  test_codex_gui_model.py  test_codex_runner.py  test_config_isolation.py  test_export_schemas.py  test_json_events.py  test_orchestrator_factory.py  test_output_paths.py  test_phase01a_inputs.py  test_phase04_prompt.py  test_phase05_candidates.py  test_report_prompts.py  test_run_manager.py  test_schemas_and_config.py  test_server_models.py  (+5 more)
(+75 files in other folders)
