[project]
name = "speca-codex"
version = "0.0.0"
description = "Codex App-compatible fork of SPECA for authorized specification-to-property audit workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "aiofiles>=23.0,<25.0",
  "fastapi>=0.100",
  "pydantic>=2.0",
  "tqdm>=4.60,<5.0",
  "httpx>=0.24",
  "uvicorn[standard]>=0.20",
]

[dependency-groups]
dev = [
  "pytest>=7.0",
]
benchmark = [
  "matplotlib>=3.7",
  "numpy>=1.24",
]
resolver = [
  "sweagent @ git+https://github.com/SWE-agent/SWE-agent.git@v1.0.1",
]
